--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # REACT_APP_BACKEND_URL=https://noona-todoapp-be.herokuapp.com
-REACT_APP_BACKEND_URL=http://localhost:5001
+REACT_APP_BACKEND_URL=https://port-0-todo-demo-ost-ss7z32llwntx0sj.sel5.cloudtype.app
 REACT_APP_BACKEND_PROXY=https://port-0-todo-demo-ost-ss7z32llwntx0sj.sel5.cloudtype.app
